--- a/WebChat/package.json
+++ b/WebChat/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "node.js": "^0.0.1-security",
+    "rtcmulticonnection-server": "^1.3.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {},
